--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -155,6 +155,24 @@
     }
 }
 
+.make-map-filters-type-burst-item(@name) {
+    .map-filters-type-disc {
+        background-color: transparent;
+        background-image: data-uri('../img/burst-@{name}.png');
+        background-repeat: no-repeat;
+        background-size: 15px 15px;
+        border: none;
+        height: 15px;
+        margin-left: -20px;
+        width: 15px;
+    }
+
+    &.on .map-filters-type-disc {
+        background-color: transparent;
+        border: none;
+    }
+}
+
 .map-filters-type {
     font-size: 14px;
     font-family: @body-font-family;
@@ -191,10 +209,7 @@
 
     &-friendly-owner {
         .make-map-filters-type-item(@friendly-owner-color);
-
-        .friendly-owner-share {
-            font-size: 12px;
-        }
+        .make-map-filters-type-burst-item('friendly-owner');
     }
 
     &-in-use {
@@ -203,6 +218,7 @@
 
     &-organized {
         .make-map-filters-type-item(@organized-color);
+        .make-map-filters-type-burst-item('organized');
     }
 
     &-public {
