--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4417,7 +4417,8 @@ form .btn-primary .badge {
 .map-filters-type-disc {
   display: inline-block;
   border-radius: 100%;
-  margin-left: -15px;
+  margin-left: -17px;
+  margin-right: 2px;
   height: 10px;
   width: 10px;
 }
@@ -4438,6 +4439,7 @@ form .btn-primary .badge {
   border: none;
   height: 15px;
   margin-left: -20px;
+  margin-right: 0;
   width: 15px;
 }
 .map-filters-type-friendly-owner.on .map-filters-type-disc {
@@ -4470,6 +4472,7 @@ form .btn-primary .badge {
   border: none;
   height: 15px;
   margin-left: -20px;
+  margin-right: 0;
   width: 15px;
 }
 .map-filters-type-organized.on .map-filters-type-disc {
