--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -164,6 +164,7 @@
         border: none;
         height: 15px;
         margin-left: -20px;
+        margin-right: 0;
         width: 15px;
     }
 
@@ -202,7 +203,8 @@
     &-disc {
         display: inline-block;
         border-radius: 100%;
-        margin-left: -15px;
+        margin-left: -17px;
+        margin-right: 2px;
         height: 10px;
         width: 10px;
     }
