Edit/delete organizers

--- a/livinglotsla/templates/livinglots/organize/organizer_list.html
+++ b/livinglotsla/templates/livinglots/organize/organizer_list.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <ul class="organizer-list">
     {% for organizer in organizers %}
         {% if organizer.post_publicly %}
@@ -17,6 +19,24 @@
                         </div>
                     {% endif %}
                 </div>
+
+                {% if "organize" in perms %}
+                    <div class="admin-only">
+
+                        {% if "organize.change_organizer" in perms %}
+                            <a href="{% url "admin:organize_organizer_change" organizer.pk %}" class="btn btn-admin">
+                                {% trans "edit" %}
+                            </a>
+                        {% endif %}
+
+                        {% if "organize.delete_organizer" in perms %}
+                            <a href="{% url "admin:organize_organizer_delete" organizer.pk %}" class="btn btn-admin">
+                                {% trans "delete" %}
+                            </a>
+                        {% endif %}
+                    </div>
+                {% endif %}
+
             </li>
         {% endif %}
     {% endfor %}
