--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -20,8 +20,7 @@
             <div id="lot-detail-map"
                 data-l-zoom="16" 
                 data-l-center="[{{ lot.centroid.y }}, {{ lot.centroid.x }}]"
-                data-l-apikey="{% inplace_setting PLACES_CLOUDMADE_KEY %}"
-                data-l-styleid="{% inplace_setting PLACES_CLOUDMADE_STYLE %}"
+                data-l-mapbox-id="{% inplace_setting PLACES_MAPBOX_ID %}"
                 data-l-scroll-wheel-zoom="false"
                 data-l-zoom-control="false"
                 data-l-lotsurl="{% url "lots:lot_geojson_polygon" %}"
