--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -275,6 +275,10 @@
         margin-top: 25px;
     }
 
+    &-streetview {
+        width: 300px;
+    }
+
     .btn {
         background: #9D64A0;
         border-radius: 30px;
