--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -49,3 +49,22 @@ input[type="checkbox"] {
 .help-text {
     font-family: @header-font-family;
 }
+
+
+/*
+ * Tooltips
+ */
+
+@tooltip-color: black;
+@tooltip-bg: white;
+
+.tooltip-inner {
+    border-radius: 0;
+    font-size: 16px;
+    text-align: left;
+    text-transform: none;
+}
+
+.tooltip.bottom .tooltip-arrow {
+    left: 15%;
+}
