--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -153,6 +153,10 @@
     &.on .map-filters-type-disc {
         background-color: @color;
     }
+
+    .tooltip-inner {
+        color: @color;
+    }
 }
 
 .make-map-filters-type-burst-item(@name) {
