--- a/livinglotsla/static/css/bootstrap.less
+++ b/livinglotsla/static/css/bootstrap.less
@@ -25,6 +25,7 @@
 @import "../bower_components/bootstrap/less/alerts.less";
 @import "../bower_components/bootstrap/less/modals.less";
 @import "../bower_components/bootstrap/less/close.less";
+@import "../bower_components/bootstrap/less/tooltip.less";
 
 // Utility classes
 @import "../bower_components/bootstrap/less/utilities.less";
