Always put tooltips in same position

--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -5184,6 +5184,9 @@ input[type="checkbox"] {
 /*
  * Tooltips
  */
+.tooltip {
+  left: 5px !important;
+}
 .tooltip-inner {
   border-radius: 0;
   font-size: 16px;
