--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -58,6 +58,10 @@ input[type="checkbox"] {
 @tooltip-color: black;
 @tooltip-bg: white;
 
+.tooltip {
+    left: 5px !important;
+}
+
 .tooltip-inner {
     border-radius: 0;
     font-size: 16px;
