Link to LA's community plan areas site

--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -287,7 +287,9 @@
                     {% if community_plan_area %}
                         <li>
                             {% trans "Community Plan Area" %}:
-                            {{ community_plan_area }}
+                            <a href="http://cityplanning.lacity.org/complan/cpa/cpa.htm" target="_blank">
+                                {{ community_plan_area }}
+                            </a>
                         </li>
                     {% endif %}
 
