Fix background for navbar when active AND hover

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -150,7 +150,8 @@ header .row {
         }
     }
 
-    .navbar-nav > .active > a {
+    .navbar-nav > .active > a,
+    .navbar-nav > .active > a:hover {
         background-color: inherit;
         color: black;
         text-decoration: underline;
