--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4004,7 +4004,8 @@ header .row {
 .navbar-default .navbar-nav > li > a:hover {
   text-decoration: underline;
 }
-.navbar-default .navbar-nav > .active > a {
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover {
   background-color: inherit;
   color: black;
   text-decoration: underline;
