--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -216,6 +216,10 @@
     &-friendly-owner {
         .make-map-filters-type-item(@friendly-owner-color);
         .make-map-filters-type-burst-item('friendly-owner');
+
+        .friendly-owner-share {
+            font-size: 12px;
+        }
     }
 
     &-in-use {
