--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -143,7 +143,7 @@
                             <h3 class="map-filters-expander">{% trans "search" %}</h3>
                             <div class="map-filters-content">
                                 <form class="map-filters-search-form" data-bounds="[-117.5359,33.5391,-118.8872,34.5733]" data-city="Los Angeles" data-state="CA" data-error-message="{% trans "Could not find your location. Try again?" %}" data-warning-selector=".map-filters-search.warning">
-                                    <input id="map-filters-search" class="map-filters-search" type="search" placeholder="{% trans "address, intersection, zip, owner" %}" />
+                                    <input id="map-filters-search" class="map-filters-search" type="search" placeholder="{% trans "address, intersection, zip" %}" />
                                     <div class="warning" style="display: none;"></div>
                                     <input id="map-filters-search-lat" type="hidden" />
                                     <input id="map-filters-search-lng" type="hidden" />
