--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -128,6 +128,7 @@
 
     &-search {
         border: @frame-border;
+        font-size: 12px;
         margin-left: 8%;
         width: 92%;
     }
