--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -401,6 +401,7 @@
 
         &-container {
             font-family: @body-font-family;
+            font-size: 14px;
             max-width: 100%;
             width: 100%;
         }
