--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -83,6 +83,8 @@ header .row {
         .hidden-xs();
         .make-sm-column(3);
         .make-md-column(3);
+        font-size: 16px;
+        font-style: italic;
         padding-bottom: 5px;
         padding-top: 5px;
         input {
@@ -251,7 +253,10 @@ footer {
         .menu-bookend;
         .menu-section();
         .make-md-column(3);
+        font-size: 16px;
+        font-style: italic;
         line-height: 40px;
+        padding-top: 5px;
 
         @media (max-width: @screen-sm-max) {
             border-top: @frame-border;
