--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -402,8 +402,9 @@
         &-container {
             font-family: @body-font-family;
             font-size: 14px;
-            max-width: 100%;
-            width: 100%;
+            margin-left: 15px;
+            max-width: 90%;
+            width: 90%;
 
             .select2-choice {
                 border-radius: 0;
