--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -368,7 +368,6 @@
     .make-md-column(10);
     .make-md-column-offset(1);
     .hidden-xs();
-    height: 65px;
     position: absolute;
     bottom: 0;
     z-index: 4999;
@@ -383,6 +382,7 @@
     .make-md-column(3);
     height: 100%;
     font-weight: bold;
+    padding-bottom: 5px;
     text-transform: uppercase;
 }
 
