--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3837,6 +3837,11 @@ h3 {
 /* Header */
 header {
   background-color: white;
+  height: 127px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 5000;
 }
 header .row {
   margin: 0;
@@ -4209,6 +4214,7 @@ footer .row {
   margin-right: -15px;
   margin: 0;
   margin-bottom: 150px;
+  margin-top: 127px;
 }
 /* Base page */
 #main {
@@ -4354,6 +4360,8 @@ form .btn-primary .badge {
 .map-page #map {
   width: 100%;
   height: 1000px;
+  position: absolute;
+  margin-top: 127px;
 }
 .map-overlay {
   background: rgba(255, 255, 255, 0.8);
