--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -3,6 +3,8 @@
 .map-page #map {
     width: 100%;
     height: 1000px;
+    position: absolute;
+    margin-top: @header-height;
 }
 
 .map-overlay {
