--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -57,6 +57,19 @@
     {% endverbatim %}
 </script>
 
+<div id="map-scrollover">
+    <div id="map-scrollover-row">
+        <div id="map-scrollover-content">
+            <section>
+                <h2>Recent Activity</h2>
+            </section>
+            <section>
+                <h2>Recent Posts</h2>
+            </section>
+        </div>
+    </div>
+</div>
+
 <div id="map"
     data-l-zoom="10"
     data-l-center="[34.0248,-118.3255]"
