--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4855,6 +4855,8 @@ form .btn-primary .badge {
   margin-top: 1127px;
   padding-bottom: 1000px;
   width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 #map-scrollover-row {
   margin-left: -15px;
