--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -450,6 +450,8 @@
     margin-top: 1127px;
     padding-bottom: 1000px;
     width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 
     &-row {
         .make-row();
