--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -60,12 +60,7 @@
 <div id="map-scrollover">
     <div id="map-scrollover-row">
         <div id="map-scrollover-content">
-            <section>
-                <h2>Recent Activity</h2>
-            </section>
-            <section>
-                <h2>Recent Posts</h2>
-            </section>
+            {% include "livinglots/lots/_scrollover.html" %}
         </div>
     </div>
 </div>
