--- a/livinglotsla/static/css/pages/blog.less
+++ b/livinglotsla/static/css/pages/blog.less
@@ -7,24 +7,6 @@
         margin-right: 0;
     }
 
-    h2,
-    h2 a {
-        font-size: 20px;
-        font-weight: bold;
-        margin-bottom: 5px;
-        margin-top: 0;
-        text-transform: uppercase;
-    }
-
-    .meta {
-        color: gray;
-        font-family: @header-font-family;
-        font-size: 12px;
-        font-weight: bold;
-        margin-bottom: 15px;
-        text-transform: uppercase;
-    }
-
     img {
         height: auto;
         max-width: 100%;
@@ -41,5 +23,23 @@
 
     &-cover-image {
         .make-md-column(4);
+    }
+
+    &-meta {
+        color: gray;
+        font-family: @header-font-family;
+        font-size: 12px;
+        font-weight: bold;
+        margin-bottom: 15px;
+        text-transform: uppercase;
+    }
+
+    h2&-title,
+    h2&-title a {
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 5px;
+        margin-top: 0;
+        text-transform: uppercase;
     }
 }
