--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -490,4 +490,22 @@
             padding-bottom: 10px;
         }
     }
+
+    .map-scrollover-activities-row {
+        .make-row();
+
+        .map-scrollover-activity {
+            .make-md-column(3);
+        }
+
+        .action-timestamp {
+            color: gray;
+            font-family: @header-font-family;
+            font-size: 12px;
+            font-weight: bold;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+            
+        }
+    }
 }
