--- a/livinglotsla/templates/actstream/posted_a_picture/action.html
+++ b/livinglotsla/templates/actstream/posted_a_picture/action.html
@@ -1,5 +1,5 @@
 {% extends "actstream/action_detail_content.html" %}
 
 {% block verb %}
-    posted a <a href="{{ action.target.get_absolute_url }}#photos" target="_blank">picture</a> on
+posted a <a href="{{ action.target.get_absolute_url }}#photos/{{ action.action_object.pk }}" target="_blank">picture</a> on
 {% endblock %}
