--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -1,6 +1,6 @@
 {% load feincms_tags feincms_page_tags i18n static %}
 
-<header>
+<header id="page-header">
     <div class="visible-print" style="margin-left: 30px; margin-top: 15px; font-size: 30px; line-height: 30px;">
         LA Open Acres
     </div>
