--- a/livinglotsla/static/css/variables.less
+++ b/livinglotsla/static/css/variables.less
@@ -15,6 +15,6 @@
 @public-color: #990000;
 @public-remnant-color: #993333;
 @public-sidelot-color: #996666;
-@private-color: #663366;
-@private-ab-551-color: #CC99CC;
+@private-color: #CC99CC;
+@private-ab-551-color: #663366;
 @private-tax-default-color: #996699;
