Recent Posts -> Blog

--- a/livinglotsla/templates/livinglots/lots/_scrollover.html
+++ b/livinglotsla/templates/livinglots/lots/_scrollover.html
@@ -12,7 +12,9 @@
     </div>
 </section>
 <section>
-    <h2>Recent Posts</h2>
+    <h2>
+        <a href="/blog/" target="_blank">Recent Posts</a>
+    </h2>
 
     <div>
         {% get_latest_entries for "LA Open Acres" 4 as entries %}
