--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -5,6 +5,10 @@
     height: 1000px;
     position: fixed;
     margin-top: @header-height;
+
+    @media (max-width: @screen-sm-max) {
+        margin-top: @header-height-sm;
+    }
 }
 
 .map-overlay {
