--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -72,3 +72,16 @@ input[type="checkbox"] {
 .tooltip.bottom .tooltip-arrow {
     left: 15%;
 }
+
+
+/*
+ * Modals
+ */
+
+.modal {
+    z-index: 7000;
+
+    &-backdrop {
+       z-index: 6999;
+    }
+}
